# lightning-template

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt  train.py
.devcontainer/: cpu.Dockerfile  devcontainer.json  gpu.Dockerfile
configs/datamodule/: mnist.yaml
configs/model/: mnist.yaml
configs/trainer/: default.yaml
models/: mnist_litmodule.py  simple_dense_net.py
nbs/: mnist_datamodule.ipynb  mnist_litmodule.ipynb  simpledense.ipynb  train.ipynb  train_classifier.ipynb
src/: lightning_config.py  run_utils.py  train_utils.py
